finish google clone self!

--- a/google.html
+++ b/google.html
@@ -16,7 +16,9 @@
 
     <div class="main">
       <div class="logo">
-        <img src="images/google_logo.png" alt="" height="90px" />
+        <a href="google.html">
+          <img src="images/google_logo.png" height="90px"
+        /></a>
       </div>
       <form class="search_bar">
         <div>
@@ -29,6 +31,61 @@
           <i class="fas fa-microphone"></i>
         </div>
       </form>
+    </div>
+
+    <div class="go">
+      <div class="site">
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/webstore_logo.png" alt="" />
+          </div>
+          <div>웹스토어</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/naver_logo.png" alt="" />
+          </div>
+          <div>naver</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/hongik_logo.png" alt="" />
+          </div>
+          <div>클래스넷</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/github_logo.png" alt="" />
+          </div>
+          <div>github</div>
+        </div>
+      </div>
+      <div class="site">
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/tistory_logo.png" alt="" />
+          </div>
+          <div>tistory</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/Pinterest-logo.png" alt="" />
+          </div>
+          <div>pinterest</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <img src="images/chrome_logo.png" alt="" />
+          </div>
+          <div>gsuit</div>
+        </div>
+        <div class="indi_site">
+          <div class="indi_site icon">
+            <i class="fas fa-plus"></i>
+          </div>
+          <div>바로가기 추가</div>
+        </div>
+      </div>
     </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
